# pybind11_toy_examples

./: CMakeLists.txt  README.md
Automatic_downcasting/: CMakeLists.txt  main.cpp
Bindings_for_a_custom_type/: CMakeLists.txt  People.cpp  People.h  main.cpp
Combining_virtual_func_and_inheritance/: CMakeLists.txt  Combine.cpp  main.cpp
Eigen/: CMakeLists.txt  Eigen.cpp
Enumerations_and_internal_types/: CMakeLists.txt  Enum.cpp  Enum.h  main.cpp
Hello_world/: CMakeLists.txt  func.cpp  func.h  main.cpp
Inheritance/: CMakeLists.txt  Pet.cpp  Pet.h  main.cpp
Overload_methods/: CMakeLists.txt  Overload.cpp  Overload.h  main.cpp
Overriding_virtual_func/: Animal.cpp  Animal.h  CMakeLists.txt  main.cpp
Smart_ptr/: CMakeLists.txt  SharedPtr.cpp
